Neubot 0.4.2-rc4 [2011-09-16]
	* MacOS: Remove Neubot-pkg
	* MacOS: add neubot-pkg
	* MacOS doc: s/Neubot-VERSION.pkg/neubot-VERSION.pkg/
	* Merge branch 'pu.MacOS' into next
	* database: fix regression with old clients
	* database/_table_utils.py: allow null entries
	* table_bittorrent.py table_speedtest.py: pylintify
	* neubot.nsi: make sure we delete all from autostart
	* neubot.nsi: Typo
	* neubot.nsi: Want to run as admin
	* Merge branch 'pu.win32-installer' into next
	* Release neubot/0.4.2-rc4

Neubot 0.4.2-rc3 [2011-09-15]
	* doc: updater/unix.py: no need to use current version number
	* doc: MacOS/installer.txt: mention the ``latest`` file
	* MacOS: makepkg.py: also create the ``latest`` file
	* Merge branches 'pu.MacOS' and 'pu.doc' into next
	* scripts/fixperms: fix permissions
	* neubot.nsi: do not autostart neubot
	* Makefile: force UID=0 and GID=0 when installing
	* Release neubot/0.4.2-rc3

Neubot 0.4.2-rc2 [2011-09-10]
	* MacOS/makepkg.py: be python2.6-compatible
	* www: privacy.js: don't mix 1/0 and true/false in settings.html
	* www: settings.html: clarify that some settings require restart
	* doc: MacOS/installer.txt: update
	* Merge branches 'pu.MacOS' and 'pu.www' into next
	* updater/unix.py: reverse time comparison to give updates a chance
	* updater/unix.py: must chdir before chroot
	* updater/unix.py: follow 'setuid demystified' guidelines
	* updater/unix.py: naive chroot for MacOSX
	* updater/unix.py: make sure chroot directory starts with /
	* updater/unix.py: be more precise with respect to copyright
	* updater/unix.py: unbreak downloading sha256 sum
	* updater/unix.py: unbreak switching to new version
	* updater/unix.py: more readable error messages
	* updater/unix.py: improve pylint score
	* updater/unix.py: disable chroot for 0.4.2
	* Merge branch 'pu.updater' into next
	* Release neubot/0.4.2-rc2

Neubot 0.4.2-rc1 [2011-09-07]
	* log.py: table_log may be None
	* system/unix.py: fix openlog() and syslog() flags